--- a/Twister.lpi
+++ b/Twister.lpi
@@ -26,6 +26,9 @@
     </RunParams>
     <RequiredPackages>
       <Item>
+        <PackageName Value="LazControls"/>
+      </Item>
+      <Item>
         <PackageName Value="FCL"/>
       </Item>
       <Item>
@@ -55,6 +58,14 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="MailMerge"/>
       </Unit>
+      <Unit>
+        <Filename Value="frmsettings.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form1"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="frmSettings"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -65,7 +76,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="DataClasses"/>
+      <OtherUnitFiles Value="DataClasses;imgs"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
