--- a/Twister.lpi
+++ b/Twister.lpi
@@ -65,6 +65,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit>
+      <Unit>
+        <Filename Value="settings.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Settings"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
