--- a/backup/Twister.lpi
+++ b/backup/Twister.lpi
@@ -61,10 +61,14 @@
       <Unit>
         <Filename Value="frmsettings.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="Form1"/>
+        <ComponentName Value="FormSettings"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="frmSettings"/>
+      </Unit>
+      <Unit>
+        <Filename Value="settings.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Settings"/>
       </Unit>
     </Units>
   </ProjectOptions>
