--- a/backup/Twister.lpi
+++ b/backup/Twister.lpi
@@ -14,6 +14,7 @@
       </XPManifest>
       <Icon Value="0"/>
     </General>
+    <LazDoc Paths="Help"/>
     <BuildModes>
       <Item Name="Default" Default="True"/>
     </BuildModes>
