--- a/Twister.ini
+++ b/Twister.ini
@@ -2,3 +2,4 @@
 DataBasePath=C:\Development\Lazarus\LetterWizard\Twister.db
 TemplatePath=C:\Development\Lazarus\LetterWizard\Templates\template.odt
 DocPath=C:\Users\vange\OneDrive\Documents\LazDocs
+StartLine=27
